k8s/agace-microfront/agace-microfront-deployment-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: modulefederation-agace-microfront-deployment-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: modulefederation-agace-microfront-dev
  template:
    metadata:
      labels:
        app: modulefederation-agace-microfront-dev
    spec:
      containers:
      - name: front-vucem30-container-dev
        image: ghcr.io/vucem30/dockerized-modulefederation-agace-microfront:1.0.35
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
      imagePullSecrets:
      - name: vucem30registrykey
